// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Score render correctly without props 1`] = `
<div
  className="Score"
  style={
    Object {
      "backgroundColor": "rgb(131, 131, 1)",
    }
  }
>
  <img
    alt="icon"
    className="Icon"
  />
  Score: 0
</div>
`;

exports[`Score render text correctly with given value 1`] = `
<div
  className="Score"
  style={
    Object {
      "backgroundColor": "rgb(131, 131, 1)",
    }
  }
>
  <img
    alt="icon"
    className="Icon"
  />
  Score: 5
</div>
`;
